--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@prisma/client": "^4.3.1",
     "bcrypt": "^5.0.1",
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "ts-node-dev": "^2.0.0",
     "tsyringe": "^4.7.0"
@@ -19,6 +21,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.9",
     "prisma": "^4.3.1",
     "typescript": "^4.8.3"
   }
