--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Ianara-cs <ianarasilva333@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "start": "node src/server.ts",
     "dev": "ts-node-dev --inspect --transpile-only --exit-child --ignore-watch node_modules --respawn src/server.ts"
   },
   "dependencies": {
