--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "scripts": {
     "start": "node build/server.js",
+    "build": "tsc",
     "dev": "ts-node-dev --inspect --transpile-only --exit-child --ignore-watch node_modules --respawn src/server.ts"
   },
   "dependencies": {
